US5180 Generate a broad set of entity types in a small set to test model-driven code